--- a/src/styles/ChatPage.scss
+++ b/src/styles/ChatPage.scss
@@ -40,7 +40,6 @@
   position: relative;
 }
 
-
 .yours .message.last:before {
   content: "";
   position: absolute;
@@ -123,6 +122,22 @@
 }
 .msg-input {
 
+}
+.public-err-container {
+  box-shadow: 0 0 2px 2px pink;
+  color: red;
+  animation: fade-in 1.5s 1;
+  padding: 4px;
+  border-radius: 10px;
+  margin-bottom: 15px;
+}
+@keyframes fade-in{
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
 }
 
 @media screen and (max-width: 600px) {
